<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_orange_yellow">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/header_name"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <View
                        android:id="@+id/button_restore"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:background="@drawable/ic_restore"
                        android:clickable="true"
                        android:focusable="true" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/text_view_fio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/search_bg"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/fio"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/button_date"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/fied_button_selector"
                        android:clickable="true"
                        android:drawablePadding="16dp"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_date" />

                    <TextView
                        android:id="@+id/button_curs"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/fied_button_selector"
                        android:clickable="true"
                        android:drawablePadding="16dp"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/curs"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_curs" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/button_naprav"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/fied_button_selector"
                        android:clickable="true"
                        android:drawablePadding="16dp"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/naprav"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_naprav" />
                </LinearLayout>
                <!--
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:layout_marginBottom="16dp"
                                    android:gravity="center"
                                    android:orientation="horizontal">

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="16dp"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <androidx.cardview.widget.CardView
                                            android:id="@+id/button_week"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:clickable="true"
                                            android:focusable="true"
                                            android:foreground="?android:selectableItemBackground"
                                            app:cardBackgroundColor="@color/white"
                                            app:cardCornerRadius="25dp"
                                            app:cardElevation="0dp">

                                            <ImageView
                                                android:layout_width="25dp"
                                                android:layout_height="25dp"
                                                android:layout_gravity="center"
                                                android:contentDescription="@string/todo"
                                                android:src="@drawable/ic_today"
                                                app:tint="@color/gradient_end" />
                                        </androidx.cardview.widget.CardView>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="8dp"
                                            android:fontFamily="@font/roboto_medium"
                                            android:text="@string/week"
                                            android:textColor="@color/white"
                                            android:textSize="14sp" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginEnd="16dp"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <androidx.cardview.widget.CardView
                                            android:id="@+id/button_favorite"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:clickable="true"
                                            android:focusable="true"
                                            android:foreground="?android:selectableItemBackground"
                                            app:cardBackgroundColor="@color/white"
                                            app:cardCornerRadius="25dp"
                                            app:cardElevation="0dp">

                                            <ImageView
                                                android:layout_width="25dp"
                                                android:layout_height="25dp"
                                                android:layout_gravity="center"
                                                android:contentDescription="@string/todo"
                                                android:src="@drawable/ic_favorite"
                                                app:tint="@color/gradient_end" />
                                        </androidx.cardview.widget.CardView>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="8dp"
                                            android:fontFamily="@font/roboto_medium"
                                            android:text="@string/favorite"
                                            android:textColor="@color/white"
                                            android:textSize="14sp" />
                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:orientation="vertical">

                                        <androidx.cardview.widget.CardView
                                            android:id="@+id/button_share"
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:clickable="true"
                                            android:focusable="true"
                                            android:foreground="?android:selectableItemBackground"
                                            app:cardBackgroundColor="@color/white"
                                            app:cardCornerRadius="25dp"
                                            app:cardElevation="0dp">

                                            <ImageView
                                                android:layout_width="25dp"
                                                android:layout_height="25dp"
                                                android:layout_gravity="center"
                                                android:contentDescription="@string/todo"
                                                android:src="@drawable/ic_share"
                                                app:tint="@color/gradient_end" />

                                        </androidx.cardview.widget.CardView>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="8dp"
                                            android:fontFamily="@font/roboto_medium"
                                            android:text="@string/share"
                                            android:textColor="@color/white"
                                            android:textSize="14sp" />
                                    </LinearLayout>
                                </LinearLayout>
                                -->
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/title_bg"
            android:elevation="0dp"
            android:fitsSystemWindows="false"
            app:layout_collapseMode="pin">

            <TextView
                android:id="@+id/lenta_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/student_list"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/student_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/birthday_list_item" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>